fix: [Views] adjust panel top spacing (#9477)
* fix: panel top spacing

* change brand primary color with the actual color code

* update environment panel to top

--- a/app/Views/errors/html/debug.css
+++ b/app/Views/errors/html/debug.css
@@ -3,7 +3,7 @@
     --main-text-color: #555;
     --dark-text-color: #222;
     --light-text-color: #c7c7c7;
-    --brand-primary-color: #E06E3F;
+    --brand-primary-color: #DC4814;
     --light-bg-color: #ededee;
     --dark-bg-color: #404040;
 }
@@ -71,7 +71,7 @@ p.lead {
     text-align: center;
     padding: calc(4px + 0.2083vw);
     width: 100%;
-    margin-top: -2.14rem;
+    top: 0;
     position: fixed;
 }
 
